--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="public/title-rd.ico" type="image/x-icon" />
+    <link rel="website icon" href="public/title-rd.ico" type="image/x-icon" />
     <title>RIZKY - Portfolio Website</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -16,6 +16,12 @@
     <link href="dist/css/final.css" rel="stylesheet" />
   </head>
   <body class="font-pro dark:bg-dark">
+    <!-- Animation Loading -->
+    <div class="fixed z-50 flex h-screen w-full items-center justify-center bg-white dark:bg-dark" id="loader">
+      <h1 class="name">RZKYRMDNU</h1>
+    </div>
+    <!-- Animation Loading End -->
+
     <!-- Header -->
     <header class="absolute top-0 left-0 z-10 flex w-full items-center bg-transparent">
       <div class="container">
@@ -344,7 +350,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
                 <!-- Dark Mode -->
                 <li class="mx-6 mt-3 flex items-center md:mt-0">
                   <div class="flex items-center">
-                    <svg class="mr-1 h-4 w-4 dark:text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                    <svg class="mr-1 h-4 w-4 text-dark dark:text-transparent" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                       <path
                         fill-rule="evenodd"
                         d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
@@ -357,7 +363,9 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
                         <div class="toggle-circle h-5 w-5 rounded-full bg-white transition duration-200 ease-in-out dark:bg-dark"></div>
                       </div>
                     </label>
-                    <svg class="ml-1 h-4 w-4 dark:text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path></svg>
+                    <svg class="ml-1 h-4 w-4 text-transparent dark:text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                      <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
+                    </svg>
                   </div>
                 </li>
               </ul>
@@ -373,13 +381,13 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
       <div class="container">
         <!-- Left -->
         <div class="flex flex-wrap items-center justify-center">
-          <div class="w-full self-center px-6 md:w-1/2" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="50">
+          <div class="w-full self-center px-6 md:w-1/2" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="3000">
             <h1 class="text-2xl font-bold text-dark dark:text-white md:text-4xl">Hi, my name is <span class="mt-2 block text-2xl font-black text-sky md:text-5xl">Rizky Rama Dhanu</span></h1>
             <h2 class="mt-4 text-base font-medium text-dark dark:text-white md:text-xl">Saya seorang <span class="text-pink-500">Junior Front End Developer</span> dari Sukoharjo, Indonesia</h2>
             <div class="flex items-center">
               <!-- Fecebook -->
               <a href="https://www.facebook.com/profile.php?id=100073266275396" target="_blank">
-                <svg class="mt-3 mr-3 w-7 dark:fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                <svg class="mt-3 mr-3 w-7 hover:opacity-80 dark:fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                   <title>Fecebook</title>
                   <path
                     d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"
@@ -388,16 +396,25 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
               </a>
               <!-- Instagram -->
               <a href="https://instagram.com/danualexis58_" target="_blank">
-                <svg class="mt-3 mr-3 w-7 dark:fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                <svg class="mt-3 mr-3 w-7 hover:opacity-80 dark:fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                   <title>Instagram</title>
                   <path
                     d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
                   />
                 </svg>
               </a>
+              <!-- Linkedin -->
+              <a href="https://www.linkedin.com/in/rzkyrmdnu/" target="_blank">
+                <svg class="mt-3 mr-3 w-7 hover:opacity-80 dark:fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                  <title>Linkedin</title>
+                  <path
+                    d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
+                  />
+                </svg>
+              </a>
               <!-- Github -->
               <a href="https://github.com/DanuAlexis" target="_blank">
-                <svg class="mt-3 mr-3 w-7 dark:fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
+                <svg class="mt-3 mr-3 w-7 hover:opacity-80 dark:fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
                   <title>Github</title>
                   <path
                     d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
@@ -407,7 +424,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
             </div>
           </div>
           <!-- Right -->
-          <div class="w-full max-w-xs self-end px-6 md:w-1/2 md:max-w-lg" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50">
+          <div class="w-full max-w-xs self-end px-6 md:w-1/2 md:max-w-lg" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="3000">
             <div class="mt-10">
               <img src="public/hero.svg" alt="hero" />
             </div>
@@ -453,7 +470,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
                   <h2 class="mb-2 font-extrabold">Sekolah Menengah Kejuruan</h2>
                   <p class="font-medium">SMK Veteran 1</p>
                   <p class="mb-2 font-medium">Teknik Komputer Dan Jaringan</p>
-                  <p class="text-sm font-medium">2020 - Sekarang</p>
+                  <p class="text-sm font-medium">2021 - Sekarang</p>
                 </li>
               </ol>
               <h1 class="mb-3 text-3xl font-black">Pengalaman Kerja</h1>
@@ -483,6 +500,11 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
                   <p class="text-sm font-medium">Jan 2023 - Mar 2023</p>
                 </li>
               </ol>
+              <h1 class="mb-3 text-3xl font-black">Resume</h1>
+              <p class="font-medium">
+                Anda dapat melihat resume saya
+                <a class="underline underline-offset-1 hover:text-dark dark:hover:text-slate-100" href="public/pdf/resume.pdf" target="_blank">disini</a>
+              </p>
             </div>
           </div>
         </div>
@@ -881,10 +903,10 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
               </label>
               <!-- Button Kirim -->
               <div class="flex w-full">
-                <button type="submit" class="btn-kirim rounded bg-sky py-2 px-4 font-semibold text-white transition duration-200 hover:bg-blue-600 hover:shadow-lg">Kirim</button>
+                <button type="submit" class="btn-kirim rounded bg-sky py-2 px-4 font-semibold text-white transition duration-200 hover:brightness-90">Kirim</button>
                 <!-- Button Loading -->
-                <button type="button" class="btn-loading flex hidden items-center rounded bg-blue-600 px-4 py-2 text-white shadow-lg" disabled>
-                  <svg class="mr-3 h-5 w-5 animate-spin text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                <button type="button" class="btn-loading flex hidden items-center rounded bg-sky px-4 py-2 text-white shadow-lg brightness-90" disabled>
+                  <svg class="animate-spin mr-3 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                     <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
                     <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
                   </svg>
@@ -987,23 +1009,32 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
             <ul class="flex items-center">
               <!-- Fecebook -->
               <li>
-                <a href="https://www.facebook.com/profile.php?id=100073266275396" class="mr-3 flex h-10 w-10 items-center justify-center rounded-full bg-sky hover:bg-blue-600"
+                <a href="https://www.facebook.com/profile.php?id=100073266275396" class="mr-3 flex h-10 w-10 items-center justify-center rounded-full bg-sky hover:opacity-80"
                   ><svg class="h-5 w-5 fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
                     <path d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z" /></svg
                 ></a>
               </li>
               <!-- Instagram -->
               <li>
-                <a href="https://instagram.com/danualexis58_" class="mr-3 flex h-10 w-10 items-center justify-center rounded-full bg-sky hover:bg-blue-600"
+                <a href="https://instagram.com/danualexis58_" class="mr-3 flex h-10 w-10 items-center justify-center rounded-full bg-sky hover:opacity-80"
                   ><svg class="h-5 w-5 fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                     <path
                       d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
                     /></svg
                 ></a>
               </li>
+              <!-- Linkedin -->
+              <li>
+                <a href="https://www.linkedin.com/in/rzkyrmdnu/" class="mr-3 flex h-10 w-10 items-center justify-center rounded-full bg-sky hover:opacity-80"
+                  ><svg class="h-5 w-5 fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                    <path
+                      d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
+                    /></svg
+                ></a>
+              </li>
               <!-- Github -->
               <li>
-                <a href="https://github.com/DanuAlexis" class="flex h-10 w-10 items-center justify-center rounded-full bg-sky hover:bg-blue-600"
+                <a href="https://github.com/DanuAlexis" class="flex h-10 w-10 items-center justify-center rounded-full bg-sky hover:opacity-80"
                   ><svg class="h-5 w-5 fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
                     <path
                       d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
