--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
           <!-- Right -->
           <div class="w-full px-6 md:w-1/2 md:px-0 md:text-left">
             <h1 class="mb-3 text-center text-3xl font-black text-white dark:text-dark" data-aos="fade-up" data-aos-duration="1000">About</h1>
-            <div class="text-white dark:text-dark" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50">
+            <div class="text-white dark:text-dark" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
               <p class="mb-3 font-medium">
                 Hai semuanya, nama saya Rizky Rama Dhanu. Saya seorang Junior Front End Developer, Siswa Tkj, Free/Libre dan Open Source, Coding adalah passion dan hobi saya sejak saya berusia 15 tahun, dan saya menyukai komputer sejak saya
                 masih kecil.
@@ -536,80 +536,80 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
         <div class="flex flex-wrap justify-center p-5">
           <!-- Html -->
           <div
-            class="mx-3 my-5 flex w-1/3 flex-col items-center justify-center gap-3 rounded-xl border-2 border-solid border-gray-200 bg-gray-100 p-5 shadow-lg hover:bg-gray-200 dark:border-gray-800 dark:bg-dark hover:dark:bg-slate-800 md:w-1/5"
+            class="mx-3 my-5 flex w-1/3 flex-col items-center justify-center gap-3 rounded-xl border-2 border-solid border-gray-200 bg-gray-100 p-5 hover:bg-gray-200 dark:border-gray-800 dark:bg-dark hover:dark:bg-slate-800 md:w-1/5"
             data-aos="fade-right"
             data-aos-duration="1000"
-            data-aos-delay="50"
+            data-aos-delay="100"
             title="HTML"
           >
             <img class="w-24" src="public/icons/html.svg" alt="HTML" />
           </div>
           <!-- Css -->
           <div
-            class="mx-3 my-5 flex w-1/3 flex-col items-center justify-center gap-3 rounded-xl border-2 border-solid border-gray-200 bg-gray-100 p-5 shadow-lg hover:bg-gray-200 dark:border-gray-800 dark:bg-dark hover:dark:bg-slate-800 md:w-1/5"
+            class="mx-3 my-5 flex w-1/3 flex-col items-center justify-center gap-3 rounded-xl border-2 border-solid border-gray-200 bg-gray-100 p-5 hover:bg-gray-200 dark:border-gray-800 dark:bg-dark hover:dark:bg-slate-800 md:w-1/5"
             data-aos="fade-right"
             data-aos-duration="1000"
-            data-aos-delay="50"
+            data-aos-delay="100"
             title="CSS"
           >
             <img class="w-24" src="public/icons/css.svg" alt="CSS" />
           </div>
           <!-- Bootstrap -->
           <div
-            class="mx-3 my-5 flex w-1/3 flex-col items-center justify-center gap-3 rounded-xl border-2 border-solid border-gray-200 bg-gray-100 p-5 shadow-lg hover:bg-gray-200 dark:border-gray-800 dark:border-gray-800 dark:bg-dark hover:dark:bg-slate-800 md:w-1/5"
+            class="mx-3 my-5 flex w-1/3 flex-col items-center justify-center gap-3 rounded-xl border-2 border-solid border-gray-200 bg-gray-100 p-5 hover:bg-gray-200 dark:border-gray-800 dark:border-gray-800 dark:bg-dark hover:dark:bg-slate-800 md:w-1/5"
             data-aos="fade-right"
             data-aos-duration="1000"
-            data-aos-delay="50"
+            data-aos-delay="100"
             title="Bootstrap"
           >
             <img class="w-28" src="public/icons/bootstrap.svg" alt="Bootstrap" />
           </div>
           <!-- C++ -->
           <div
-            class="mx-3 my-5 flex w-1/3 flex-col items-center justify-center gap-3 rounded-xl border-2 border-solid border-gray-200 bg-gray-100 p-5 shadow-lg hover:bg-gray-200 dark:border-gray-800 dark:border-gray-800 dark:bg-dark hover:dark:bg-slate-800 md:w-1/5"
+            class="mx-3 my-5 flex w-1/3 flex-col items-center justify-center gap-3 rounded-xl border-2 border-solid border-gray-200 bg-gray-100 p-5 hover:bg-gray-200 dark:border-gray-800 dark:border-gray-800 dark:bg-dark hover:dark:bg-slate-800 md:w-1/5"
             data-aos="fade-right"
             data-aos-duration="1000"
-            data-aos-delay="50"
+            data-aos-delay="100"
             title="C++"
           >
             <img class="w-24" src="public/icons/cpp.svg" alt="C++" />
           </div>
           <!-- JavaScript -->
           <div
-            class="mx-3 my-5 flex w-1/3 flex-col items-center justify-center gap-3 rounded-xl border-2 border-solid border-gray-200 bg-gray-100 p-5 shadow-lg hover:bg-gray-200 dark:border-gray-800 dark:border-gray-800 dark:bg-dark hover:dark:bg-slate-800 md:w-1/5"
+            class="mx-3 my-5 flex w-1/3 flex-col items-center justify-center gap-3 rounded-xl border-2 border-solid border-gray-200 bg-gray-100 p-5 hover:bg-gray-200 dark:border-gray-800 dark:border-gray-800 dark:bg-dark hover:dark:bg-slate-800 md:w-1/5"
             data-aos="fade-right"
             data-aos-duration="1000"
-            data-aos-delay="50"
+            data-aos-delay="100"
             title="JavaScript"
           >
             <img class="w-24 rounded-xl" src="public/icons/js.svg" alt="javaScript" />
           </div>
           <!-- Tailwind CSS -->
           <div
-            class="mx-3 my-5 flex w-1/3 flex-col items-center justify-center gap-3 rounded-xl border-2 border-solid border-gray-200 bg-gray-100 p-5 shadow-lg hover:bg-gray-200 dark:border-gray-800 dark:border-gray-800 dark:bg-dark hover:dark:bg-slate-800 md:w-1/5"
+            class="mx-3 my-5 flex w-1/3 flex-col items-center justify-center gap-3 rounded-xl border-2 border-solid border-gray-200 bg-gray-100 p-5 hover:bg-gray-200 dark:border-gray-800 dark:border-gray-800 dark:bg-dark hover:dark:bg-slate-800 md:w-1/5"
             data-aos="fade-right"
             data-aos-duration="1000"
-            data-aos-delay="50"
+            data-aos-delay="100"
             title="Tailwind CSS"
           >
             <img class="w-24" src="public/icons/tailwind.svg" alt="Tailwind CSS" />
           </div>
           <!-- Laravel -->
           <div
-            class="mx-3 my-5 flex w-1/3 flex-col items-center justify-center gap-3 rounded-xl border-2 border-solid border-gray-200 bg-gray-100 p-5 shadow-lg hover:bg-gray-200 dark:border-gray-800 dark:border-gray-800 dark:bg-dark hover:dark:bg-slate-800 md:w-1/5"
+            class="mx-3 my-5 flex w-1/3 flex-col items-center justify-center gap-3 rounded-xl border-2 border-solid border-gray-200 bg-gray-100 p-5 hover:bg-gray-200 dark:border-gray-800 dark:border-gray-800 dark:bg-dark hover:dark:bg-slate-800 md:w-1/5"
             data-aos="fade-right"
             data-aos-duration="1000"
-            data-aos-delay="50"
+            data-aos-delay="100"
             title="Laravel"
           >
             <img class="w-24" src="public/icons/laravel.svg" alt="Laravel" />
           </div>
           <!-- Mysql -->
           <div
-            class="mx-3 my-5 flex w-1/3 flex-col items-center justify-center gap-3 rounded-xl border-2 border-solid border-gray-200 bg-gray-100 p-5 shadow-lg hover:bg-gray-200 dark:border-gray-800 dark:border-gray-800 dark:bg-dark hover:dark:bg-slate-800 md:w-1/5"
+            class="mx-3 my-5 flex w-1/3 flex-col items-center justify-center gap-3 rounded-xl border-2 border-solid border-gray-200 bg-gray-100 p-5 hover:bg-gray-200 dark:border-gray-800 dark:border-gray-800 dark:bg-dark hover:dark:bg-slate-800 md:w-1/5"
             data-aos="fade-right"
             data-aos-duration="1000"
-            data-aos-delay="50"
+            data-aos-delay="100"
             title="Mysql"
           >
             <img class="w-28" src="public/icons/mysql.svg" alt="Mysql" />
@@ -632,7 +632,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
         </div>
         <div class="flex flex-wrap justify-center p-5">
           <!-- Rizky Football -->
-          <div class="mx-3 my-5 flex w-full flex-col gap-3 rounded-xl bg-white p-5 shadow-lg hover:bg-gray-200 dark:bg-dark hover:dark:bg-slate-800 md:w-5/12" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="50">
+          <div class="mx-3 my-5 flex w-full flex-col gap-3 rounded-xl bg-white p-5 hover:bg-gray-200 dark:bg-dark hover:dark:bg-slate-800 md:w-5/12" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
             <div class="flex justify-between">
               <h2 class="text-xl font-bold dark:text-white">Rizky Football</h2>
               <div class="flex items-center">
@@ -659,7 +659,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
             </div>
           </div>
           <!-- Bookshelf App -->
-          <div class="mx-3 my-5 flex w-full flex-col gap-3 rounded-xl bg-white p-5 shadow-lg hover:bg-gray-200 dark:bg-dark hover:dark:bg-slate-800 md:w-5/12" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="50">
+          <div class="mx-3 my-5 flex w-full flex-col gap-3 rounded-xl bg-white p-5 hover:bg-gray-200 dark:bg-dark hover:dark:bg-slate-800 md:w-5/12" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
             <div class="flex justify-between">
               <h2 class="text-xl font-bold dark:text-white">Bookshelf App</h2>
               <div class="flex items-center">
@@ -686,7 +686,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
             </div>
           </div>
           <!-- My Old Portfolio -->
-          <div class="mx-3 my-5 flex w-full flex-col gap-3 rounded-xl bg-white p-5 shadow-lg hover:bg-gray-200 dark:bg-dark hover:dark:bg-slate-800 md:w-5/12" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="50">
+          <div class="mx-3 my-5 flex w-full flex-col gap-3 rounded-xl bg-white p-5 hover:bg-gray-200 dark:bg-dark hover:dark:bg-slate-800 md:w-5/12" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
             <div class="flex justify-between">
               <h2 class="text-xl font-bold dark:text-white">Portfolio Old</h2>
               <div class="flex items-center">
@@ -713,7 +713,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
             </div>
           </div>
           <!-- Gbrn Variasi -->
-          <div class="mx-3 my-5 flex w-full flex-col gap-3 rounded-xl bg-white p-5 shadow-lg hover:bg-gray-200 dark:bg-dark hover:dark:bg-slate-800 md:w-5/12" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="50">
+          <div class="mx-3 my-5 flex w-full flex-col gap-3 rounded-xl bg-white p-5 hover:bg-gray-200 dark:bg-dark hover:dark:bg-slate-800 md:w-5/12" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
             <div class="flex justify-between">
               <h2 class="text-xl font-bold dark:text-white">Gbrn Variasi</h2>
               <div class="flex items-center">
@@ -737,7 +737,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
             <img class="w-9" src="public/icons/bootstrap.svg" alt="Bootstrap" title="Bootstrap" />
           </div>
           <!-- Todolist App -->
-          <div class="mx-3 my-5 flex w-full flex-col gap-3 rounded-xl bg-white p-5 shadow-lg hover:bg-gray-200 dark:bg-dark hover:dark:bg-slate-800 md:w-5/12" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="50">
+          <div class="mx-3 my-5 flex w-full flex-col gap-3 rounded-xl bg-white p-5 hover:bg-gray-200 dark:bg-dark hover:dark:bg-slate-800 md:w-5/12" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
             <div class="flex justify-between">
               <h2 class="text-xl font-bold dark:text-white">Todolist App</h2>
               <div class="flex items-center">
@@ -764,7 +764,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
             </div>
           </div>
           <!-- Game Suwit -->
-          <div class="mx-3 my-5 flex w-full flex-col gap-3 rounded-xl bg-white p-5 shadow-lg hover:bg-gray-200 dark:bg-dark hover:dark:bg-slate-800 md:w-5/12" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="50">
+          <div class="mx-3 my-5 flex w-full flex-col gap-3 rounded-xl bg-white p-5 hover:bg-gray-200 dark:bg-dark hover:dark:bg-slate-800 md:w-5/12" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
             <div class="flex justify-between">
               <h2 class="text-xl font-bold dark:text-white">Game Suwit</h2>
               <div class="flex items-center">
@@ -791,7 +791,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
             </div>
           </div>
           <!-- Haloriz -->
-          <div class="mx-3 my-5 flex w-full flex-col gap-3 rounded-xl bg-white p-5 shadow-lg hover:bg-gray-200 dark:bg-dark hover:dark:bg-slate-800 md:w-5/12" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="50">
+          <div class="mx-3 my-5 flex w-full flex-col gap-3 rounded-xl bg-white p-5 hover:bg-gray-200 dark:bg-dark hover:dark:bg-slate-800 md:w-5/12" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
             <div class="flex justify-between">
               <h2 class="text-xl font-bold dark:text-white">Haloriz</h2>
               <div class="flex items-center">
@@ -819,7 +819,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
             </div>
           </div>
           <!-- Front-End Roadmap -->
-          <div class="mx-3 my-5 flex w-full flex-col gap-3 rounded-xl bg-white p-5 shadow-lg hover:bg-gray-200 dark:bg-dark hover:dark:bg-slate-800 md:w-5/12" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="50">
+          <div class="mx-3 my-5 flex w-full flex-col gap-3 rounded-xl bg-white p-5 hover:bg-gray-200 dark:bg-dark hover:dark:bg-slate-800 md:w-5/12" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
             <div class="flex justify-between">
               <h2 class="text-xl font-bold dark:text-white">Front End Roadmap</h2>
               <div class="flex items-center">
@@ -877,7 +877,7 @@ m-3605 -10354 c87 -7 184 -19 214 -27 30 -8 75 -14 99 -14 24 0 65 -6 91 -14
               </button>
             </div>
             <!-- Contact Form -->
-            <form name="contact-form" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50">
+            <form name="contact-form" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
               <!-- Name -->
               <span class="mb-1 block font-semibold text-sky after:ml-0.5 after:text-pink-500 after:content-['*']">Nama</span>
               <label for="name">
